<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/paddingLeft"
    android:paddingRight="@dimen/paddingRight"
    android:paddingTop="@dimen/paddingTop"
    android:paddingBottom="@dimen/paddingBottom"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="11">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/sym_def_app_icon"
        android:layout_weight="3"
        />

    <TextView
        android:text="@string/landing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textSize="50dp"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/userName"
        android:hint="@string/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="text"
        android:layout_weight="1.5"

        android:layout_gravity="bottom"/>

    <EditText
        android:id="@+id/psw"
        android:hint="@string/psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="textPassword"
        android:layout_weight="1.5"

        android:layout_gravity="bottom"/>

    <Button
        android:id="@+id/btnSubmit"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1.5"
        />

</LinearLayout>
