<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/paddingLeft"
    android:paddingTop="@dimen/paddingTop"
    android:paddingRight="@dimen/paddingRight"
    android:paddingBottom="@dimen/paddingBottom"
    android:weightSum="10"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="tvName"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="2020-12-04"
            android:inputType="date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/MN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MN" />

        <CheckBox
            android:id="@+id/PN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pn" />

        <CheckBox
            android:id="@+id/FSZ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fsz" />

        <CheckBox
            android:id="@+id/_2x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2x" />

        <CheckBox
            android:id="@+id/_3x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3x" />

        <CheckBox
            android:id="@+id/TP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time" />

        <EditText
            android:id="@+id/editTextTime2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="START" />


        <Button
            android:id="@+id/btnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="STOP" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvWorkTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time"
            android:text="@string/workTime" />

        <EditText
            android:id="@+id/workTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvChargedTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time"
            android:text="@string/chargedTime" />

        <EditText
            android:id="@+id/chargedTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTimeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time"
            android:text="@string/timeLeft" />

        <EditText
            android:id="@+id/timeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time" />


    </LinearLayout>

</LinearLayout>